Fix contact section on small screens

--- a/src/style.css
+++ b/src/style.css
@@ -261,8 +261,6 @@ h6 {
   gap: 48px;
   padding: 48px;
   margin: 96px 0px;
-  height: 50vh;
-  width: 50%;
 
   border-radius: 12px;
   background-color: #333333;
@@ -319,6 +317,8 @@ h6 {
 
   .contact-content {
     align-items: center;
+    height: 50vh;
+    width: 50%;
   }
 
   .contact-title {
@@ -341,6 +341,10 @@ h6 {
 
   .review-wrapper-wrapper {
     flex-direction: column;
+  }
+
+  .contact-content {
+    width: 75%;
   }
 
   .contact-title,
